# AI-Safety-Benchmarking-RedTeam-Framework

./: .env.example  .gitignore  AGENTS.md  CITATION.cff  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
notebooks/: 01_embedding_anomaly_detection.ipynb  02_calibrated_safety_judge.ipynb
src/: __init__.py  detection.py  evaluation.py  judge.py  llm_client.py
tests/: test_detection.py  test_evaluation.py  test_judge.py
