[project]
name = "ai-security-benchmarking"
version = "0.1.0"
description = "Research-grade AI security evaluation: embedding-based anomaly detection, calibrated LLM-as-a-safety-judge, and defense-in-depth pipelines"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.0",
    "google-genai>=1.63.0",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "pydantic>=2.12.5",
    "python-dotenv>=1.1.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.15.0",
    "torch>=2.10.0",
    "transformers==4.57.6",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests that require network access or heavy model downloads",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
